styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import '@/styles/loader.css';
@import '@/styles/themes/light.css';
@import '@/styles/themes/dark.css';
@import '@/styles/themes/sakura.css';
@import '@/styles/themes/neon.css';
@import '@/styles/themes/retro.css';
@import '@/styles/themes/candy.css';
@import '@/styles/themes/arctic.css';
@import '@/styles/themes/midnight.css';
@import '@/styles/themes/honey.css';

* {
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

